K1j-1527: Fixed failing route unit tests, move to spring rest from cxf, general cleanup for sonar and changes for style